- updated event schema and event post
